# grabbit

./: Cargo.toml  README.md
resource/: post.json  posts_response.json
src/: args.rs  main.rs  model.rs  options.rs  reddit.rs
src/model/: iter.rs
