[package]
name = "grabbit"
version = "0.1.1"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
hashbrown = { version = "0.9.0", features = ["serde"] }
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
structopt = "0.3.16"
tokio = { version = "0.2.22", features = ["macros"] }
smallvec = "1.4.2"

[dev-dependencies]
serde_json = "1.0.57"
