[package]
name = "grabbit"
version = "0.2.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
hashbrown = { version = "0.12.0", features = ["serde"] }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
smallvec = "1.8.0"

[dev-dependencies]
serde_json = "1.0.78"
